--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "spencewenski.com",
+  "packageManager": "yarn@3.4.1",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,15 +10,30 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@mui/material": "^5.11.9",
     "@next/font": "13.1.6",
+    "@tanstack/react-query": "^4.24.6",
+    "@trpc/client": "^10.11.1",
+    "@trpc/next": "^10.11.1",
+    "@trpc/react-query": "^10.11.1",
+    "@trpc/server": "^10.11.1",
+    "@types/lodash": "^4.14.191",
     "@types/node": "18.14.0",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
     "eslint": "8.34.0",
     "eslint-config-next": "13.1.6",
+    "lodash": "^4.17.21",
+    "loglevel": "^1.8.1",
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "4.9.5"
+    "typescript": "4.9.5",
+    "zod": "^3.20.6"
+  },
+  "devDependencies": {
+    "prettier": "^2.8.4"
   }
 }
