--- a/package.json
+++ b/package.json
@@ -28,10 +28,10 @@
     "eslint-config-next": "13.1.6",
     "lodash": "^4.17.21",
     "loglevel": "^1.8.1",
-    "next": "13.1.6",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "typescript": "4.9.5",
+    "next": "^13.1.6",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "typescript": "^4.9.5",
     "zod": "^3.20.6"
   },
   "devDependencies": {
