--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.10.6",
     "@mui/icons-material": "^5.11.9",
     "@mui/material": "^5.11.9",
+    "@sendgrid/mail": "^7.7.0",
     "@tanstack/react-query": "^4.24.6",
     "@trpc/client": "^10.11.1",
     "@trpc/next": "^10.11.1",
@@ -31,6 +32,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "sharp": "^0.31.3",
+    "superjson": "^1.12.2",
     "typescript": "^4.9.5",
     "zod": "^3.20.6"
   },
