--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "next": "^13.1.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-use": "^17.4.0",
     "sharp": "^0.31.3",
     "superjson": "^1.12.2",
     "typescript": "^4.9.5",
