Add a 'clean' command and don't prefetch

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "next dev",
     "build": "next build && prettier -c .",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "clean": "rm -r ./.next"
   },
   "dependencies": {
     "@emotion/react": "^11.10.6",
