--- a/package.json
+++ b/package.json
@@ -32,10 +32,10 @@
     "next": "^13.1.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-use": "^17.4.0",
     "sharp": "^0.31.3",
     "superjson": "^1.12.2",
     "typescript": "^4.9.5",
+    "usehooks-ts": "^2.9.1",
     "zod": "^3.20.6"
   },
   "devDependencies": {
